--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                           <span class="mr-4 ml-2 p-2">cm</span>
                         </div>
                         <div >
-                          <p >Area=<span id="triangle-area"></span>cm<sup>2</sup></p>
+                          <p >Area=<span id="triangle-area">0</span>cm<sup>2</sup></p>
 
                         </div>
                       <div class="card-actions">
@@ -50,7 +50,7 @@
                         <span class="mr-4 ml-2 p-2">cm</span>
                       </div>
                       <div>
-                        <p>Area=<span id="rectangle-area"></span>cm<sup>2</sup></p>
+                        <p>Area=<span id="rectangle-area">0</span>cm<sup>2</sup></p>
                       </div>
                       <div class="card-actions justify-end">
                         <button onclick=" calculateRectangle()" class="btn btn-primary w-full">Calculate</button>
