--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                     <div class="card-body">
                       <h2 class="card-title">parallelogram</h2>
                       <p>Area (A) = b X h</p>
+                      <div class="flex">
+                <div class="card w-96 bg-base-100 shadow-xl">
+                  <input id="parallelogram-base" class=" rounded-sm w-24 tex-2xl bg-slate-300" type="text" placeholder="b">
+                        <span class="mr-4 ml-2 p-2">cm</span>
+                        <input id="parallelogram-height" class=" w-24 text-2xl rounded-sm bg-slate-300" type="text" placeholder="h">
+                        <span class="mr-4 ml-2 p-2">cm</span>
+                      </div>
                       <div class="card-actions justify-end">
                         <button class="btn btn-primary w-full">Calculate</button>
                       </div>
