--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
                         <input id="parallelogram-height" class=" w-24 text-2xl rounded-sm bg-slate-300" type="text" placeholder="h">
                         <span class="mr-4 ml-2 p-2">cm</span>
                       </div>
+                      <div>
+                        <p>Area=<span id="parallelogram-area">0</span>cm<sup>2</sup></p>
+                      </div>
                       <div class="card-actions justify-end">
                         <button class="btn btn-primary w-full">Calculate</button>
                       </div>
