--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <p>Area=<span id="parallelogram-area">0</span>cm<sup>2</sup></p>
                       </div>
                       <div class="card-actions justify-end">
-                        <button class="btn btn-primary w-full">Calculate</button>
+                        <button onclick="calculateParallelogram()" class="btn btn-primary w-full">Calculate</button>
                       </div>
                     </div>
                   </div>
