--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                       <div>
                         <p>Area=<span id="rectangle-area">0</span>cm<sup>2</sup></p>
                       </div>
-                      <div class="card-actions justify-end">
+                      <div class="card-actions ">
                         <button onclick=" calculateRectangle()" class="btn btn-primary w-full">Calculate</button>
                       </div>
                     </div>
@@ -73,7 +73,7 @@
                       <div>
                         <p>Area=<span id="parallelogram-area">0</span>cm<sup>2</sup></p>
                       </div>
-                      <div class="card-actions justify-end">
+                      <div class="card-actions ">
                         <button onclick="calculateParallelogram()" class="btn btn-primary w-full">Calculate</button>
                       </div>
                     </div>
