--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                       <h2 class="card-title">parallelogram</h2>
                       <p>Area (A) = b X h</p>
                       <div class="flex">
-                <div class="card w-96 bg-base-100 shadow-xl">
-                  <input id="parallelogram-base" class=" rounded-sm w-24 tex-2xl bg-slate-300" type="text" placeholder="b">
+                       <input id="parallelogram-base" class=" rounded-sm w-24 text-2xl bg-slate-300" type="text" placeholder="b">
                         <span class="mr-4 ml-2 p-2">cm</span>
                         <input id="parallelogram-height" class=" w-24 text-2xl rounded-sm bg-slate-300" type="text" placeholder="h">
                         <span class="mr-4 ml-2 p-2">cm</span>
@@ -84,7 +83,12 @@
                     <div class="card-body">
                       <h2 class="card-title">rhombus</h2>
                       <p>Area (A) =0.5 X d<sub>1</sub> X d<sub>2</sub></p>
-                      
+                      <div class="flex">
+                        <input id="parallelogram-base" class=" rounded-sm w-24 text-2xl bg-slate-300" type="text" placeholder="d1">
+                         <span class="mr-4 ml-2 p-2">cm</span>
+                         <input id="parallelogram-height" class=" w-24 text-2xl rounded-sm bg-slate-300" type="text" placeholder="d2">
+                         <span class="mr-4 ml-2 p-2">cm</span>
+                       </div>
                       <div class="card-actions ">
                         <button class="btn btn-primary w-full">Calculate</button>
                       </div>
