--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <p>Area=<span id="rhombus-area">0</span>cm<sup>2</sup></p>
                       </div>
                       <div class="card-actions ">
-                        <button class="btn btn-primary w-full">Calculate</button>
+                        <button onclick="calculateRhombus()" class="btn btn-primary w-full">Calculate</button>
                       </div>
                     </div>
                   </div>
